@@ -215,8 +215,8 @@
 
                     'If Full Paid Add Journal for Full Paid
                     AddJournal(txtAmount.Text, "Debit", "Revolving Fund", "LAYAWAY " & lay.ItemCode, "LAYAWAY", , , "LAYAWAY", layLines.LayLinesLastID)
-                    AddJournal(AllPayments - txtAmount.Text, "Debit", "Advances from customer", "LAYAWAY " & lay.ItemCode, , , "LAY-AWAY PAYMENTS", "LAYAWAY ADVANCES", layLines.LayLinesLastID)
-                    AddJournal(AllPayments - CInt(Val(lblPenalty.Text)), "Credit", "Cash Offsetting Account", "LAYAWAY " & lay.ItemCode, , , "LAY-AWAY PAYMENTS", "LAYAWAY", layLines.LayLinesLastID)
+                AddJournal(AllPayments - txtAmount.Text + CInt(Val(lblPenalty.Text)), "Debit", "Advances from customer", "LAYAWAY " & lay.ItemCode, , , "LAY-AWAY PAYMENTS", "LAYAWAY ADVANCES", layLines.LayLinesLastID)
+                AddJournal(AllPayments, "Credit", "Cash Offsetting Account", "LAYAWAY " & lay.ItemCode, , , "LAY-AWAY PAYMENTS", "LAYAWAY", layLines.LayLinesLastID)
 
                     'if Transaction have penalty
                     If lblPenalty.Text <> "" Then
