@@ -4,6 +4,7 @@ Version 1.4.3
  - Added LayAway Module
  - Added Function if Full Paid Record to Inventory Sales
  - Added Layaway List Report (Active layaway)
+ - Fix Wrong Journal in Layaway Penalty
 
 
 Version 1.4.1.15
